provision/storage/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: nginx-internal
  labels:
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  name: longhorn
  namespace: longhorn-system
spec:
  rules:
  - host: longhorn.angrynet.ninja
    http:
      paths:
      - backend:
          serviceName: longhorn-frontend
          servicePort: 80
        path: /
  tls:
  - hosts:
    - longhorn.angrynet.ninja
    secretName: longhorn-local-tls
status:
  loadBalancer:
    ingress:
    - {}
